分离用户模块，重构用户相关代码